--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="draw-area"></div>
+    <div class="draw-area" draggable="false"></div>
     
 </body>
 </html>
