--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="draw-area" draggable="false"></div>
-    <button class="grid-lines-toggle">Toggle Grid Lines</button>
+    <button class="grid-lines-btn">Toggle Grid Lines</button>
     
 </body>
 </html>
