--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="draw-area" draggable="false"></div>
+
     <button class="grid-lines-btn">Toggle Grid Lines</button>
+
+    <div class="range-slider">
+        <input type="range" min="1" max="100" value="16">
+    </div>
     
 </body>
 </html>
