Add id to range slider

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="grid-lines-btn">Toggle Grid Lines</button>
 
     <div class="range-slider">
-        <input type="range" min="1" max="100" value="16">
+        <input id="my-range" type="range" min="1" max="100" value="16">
     </div>
     
 </body>
