--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="draw-area" draggable="false"></div>
 
     <button class="grid-lines-btn">Toggle Grid Lines</button>
+    <button class="clear-canvas">Clear Canvas</button>
 
     <div class="range-slider">
         <input id="my-range" type="range" min="1" max="100" value="16">
