--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div class="range-slider">
         <input id="my-range" type="range" min="1" max="100" value="16">
+        <p class="range-display">16 x 16</p>
     </div>
     
 </body>
