--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class="draw-area" draggable="false"></div>
 
-    <button class="grid-lines-btn">Toggle Grid Lines</button>
-    <button class="clear-canvas">Clear Canvas</button>
+    <div class="btn-container">
+        <button class="grid-lines-btn">Toggle Grid Lines</button>
+        <button class="clear-canvas">Clear Canvas</button>
+    </div>
 
     <div class="range-slider">
         <input id="my-range" type="range" min="1" max="100" value="16">
