Add color options section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="draw-area" draggable="false"></div>
 
+    <div class="color-options">
+        <div>
+            <label for="current-color">Current Color:</label>
+            <div class="current-color"></div>
+        </div>
+    </div>
+
     <div class="btn-container">
         <button class="grid-lines-btn">Toggle Grid Lines</button>
         <button class="clear-canvas">Clear Canvas</button>
