--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
     <div class="draw-area" draggable="false"></div>
 
     <div class="color-options">
-        <div>
+
+        <div class="color-preview">
             <label for="current-color">Current Color:</label>
             <div class="current-color"></div>
+            
+            <label for="new-color">New Color:</label>
+            <div class="new-color"></div>
         </div>
+
+        <div class="color-sliders">
+            <p class="red-value">Red Value: 0</p>
+            <input id="red-slider" type="range" min="0" max="255" value="0">
+
+            <p class="green-value">Green Value: 0</p>
+            <input id="green-slider" type="range" min="0" max="255" value="0">
+
+            <p class="blue-value">Blue Value: 0</p>
+            <input id="blue-slider" type="range" min="0" max="255" value="0">
+
+            <button class="set-color">Set Color</button>
+        </div>
+
     </div>
 
     <div class="btn-container">
