--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <input id="my-range" type="range" min="1" max="100" value="16">
         <p class="range-display">16 x 16</p>
     </div>
+
+    <div class="old-colors"></div>
     
 </body>
 </html>
