Add random colors button and toggled-on class

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="btn-container">
         <button class="grid-lines-btn">Toggle Grid Lines</button>
         <button class="clear-canvas">Clear Canvas</button>
+        <button class="random-colors">Random Colors</button>
     </div>
 
     <div class="range-slider">
