Add alpha slider with functionality

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <p class="blue-display">Blue Value: 0</p>
             <input id="blue-slider" type="range" min="0" max="255" value="0">
 
+            <p class="alpha-display">Alpha Value: 10</p>
+            <input id="alpha-slider" type="range" min="0" max="10" value="0">
+
             <button class="set-color">Set Color</button>
         </div>
 
